Cleaned up css spacing. Removed unneeded positioning, re-placed top and left/right margins on character images.

--- a/public/css/WizVsDragon.css
+++ b/public/css/WizVsDragon.css
@@ -16,25 +16,22 @@ body {
 
 .dragon {
     display: inline-block;
-    /*width: 50%;*/
-    /*float: right;*/
     text-align: right;
 }
 
 .wizard {
     display: inline-block;
-    /*width: 50%;*/
-    /*text-align: left;*/
+    text-align: left;
 }
 
 .dragon img {
-    /*margin-top: 380px;*/
-    /*margin-right: 135px;*/
+    margin-top: 380px;
+    margin-right: 135px;
 }
 
 
 
 .wizard img {
-    /*margin-top: 400px;*/
-    /*margin-left: 200px;*/
+    margin-top: 400px;
+    margin-left: 200px;
 }
