Added image of explosion, css and html to support it. Added key code trigger for shooting wiz fireball, animated wiz fireball movement. Added to do notes.

--- a/public/css/WizVsDragon.css
+++ b/public/css/WizVsDragon.css
@@ -29,9 +29,16 @@ body {
     margin-right: 135px;
 }
 
-
+.fire {
+    text-align: center;
+    margin-top: 430px;
+}
+.fire img {
+    opacity: 0;
+}
 
 .wizard img {
     margin-top: 400px;
     margin-left: 200px;
+    animation-iteration-count: 2;
 }
