--- a/public/css/WizVsDragon.css
+++ b/public/css/WizVsDragon.css
@@ -3,15 +3,20 @@ body {
     background-size: cover;
 } 
 
+button {
+    border-radius: 10px;
+    border: 3px solid #333333;
+    background-color: white;
+    color: #333333;
+    font-family: "Monofett", sans-serif, serif;
+    font-size: 2em; 
+    margin-top: 40px;
+}
+
 .fontPos {
     font-family: "Monofett", sans-serif, serif;
     font-size: 4em;
     display: inline-block;
-    text-align: center;
-}
-
-.rightDiv {
-    text-align: right;
 }
 
 .dragon {
@@ -33,6 +38,7 @@ body {
     text-align: center;
     margin-top: 430px;
 }
+
 .fire img {
     opacity: 0;
 }
